--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "apollo-boost": "^0.4.4",
     "bulma": "^0.7.5",
+    "graphql": "^14.5.8",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-apollo": "^3.1.2",
