--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
     "mongoose": "^5.7.3",
     "nodemon": "^1.19.3"
