Updated root package json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"npm run start --prefix server\" \"npm run start --prefix client\""
+    "start": "concurrently \"npm run start --prefix server\" \"npm run start --prefix client\"",
+    "install": "concurrently \"npm install\" \"npm install --prefix server\" \"npm install --prefix client\"",
+    "build": "npm build --prefix client"
   },
   "repository": {
     "type": "git",
