--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": "https://resumeguru.herokuapp.com/",
   "browserslist": {
     "production": [
       ">0.2%",
