--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.4.4",
+    "apollo-link-context": "^1.0.19",
     "apollo-link-state": "^0.4.2",
     "bulma": "^0.7.5",
     "graphql": "^14.5.8",
