--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,12 @@
     "apollo-link-state": "^0.4.2",
     "bulma": "^0.7.5",
     "graphql": "^14.5.8",
-    "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-apollo": "^3.1.2",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "resumeguru": "file:..",
+    "sass": "1.49.0"
   },
   "scripts": {
     "start": "react-scripts start",
