--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "bcrypt": "^3.0.6",
+    "bcryptjs": "2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -22,6 +22,7 @@
     "graphql": "^14.5.8",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3",
-    "nodemon": "^1.19.3"
+    "nodemon": "^1.19.3",
+    "resumeguru": "file:.."
   }
 }
