--- a/client/package.json
+++ b/client/package.json
@@ -6,14 +6,16 @@
     "apollo-boost": "^0.4.4",
     "apollo-link-context": "^1.0.19",
     "apollo-link-state": "^0.4.2",
-    "bulma": "^0.7.5",
+    "apollo-cache-inmemory": "1.6.6",
+    "bulma": "^0.9.3",
     "graphql": "^14.5.8",
     "react": "^16.10.1",
     "react-apollo": "^3.1.2",
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2",
     "resumeguru": "file:..",
-    "sass": "1.49.0"
+    "sass": "1.49.0",
+    "apollo-link-http": "1.5.17"
   },
   "scripts": {
     "start": "react-scripts start",
