--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "react": "^16.10.1",
     "react-apollo": "^3.1.2",
     "react-dom": "^16.10.1",
+    "react-notifications": "^1.7.3",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "3.1.2",
     "resumeguru": "file:..",
     "sass": "1.49.0"
