Updated Resume guru branding to Resume guru

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Resume Guru",
-  "name": "Resume Guru - Build Your Resume",
+  "short_name": "Resume guru",
+  "name": "Resume guru - Build Your Resume",
   "icons": [
     {
       "src": "favicon.ico",
